build: generalise the install rules
Generalise the install rules, install the swiftdoc/swiftmodule as well.
The install rules seemed incoherent and unnecessarily avoided installing
content on certain targets.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 option(BUILD_SHARED_LIBS "Build shared libraries by default" YES)
 
+include(SwiftSupport)
+
 add_subdirectory(Sources)
 add_subdirectory(cmake/modules)
