build: correct build of TSCBasic
Enable specifying where the build tree for Foundation is.  In the case that
it is not part of the system image or the toolchain image, this allows CMake
to find the necessary libraries.  This allows building against a build tree
of the entire set of products.

--- a/Sources/TSCBasic/CMakeLists.txt
+++ b/Sources/TSCBasic/CMakeLists.txt
@@ -50,6 +50,7 @@ add_library(TSCBasic
   Thread.swift
   Tuple.swift)
 target_link_libraries(TSCBasic PUBLIC
+  Foundation
   TSCLibc)
 # NOTE(compnerd) workaround for CMake not setting up include flags yet
 set_target_properties(TSCBasic PROPERTIES
